; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_stream_filter.c_StreamDelete.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_stream_filter.c_StreamDelete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }
%struct.vlc_stream_filter_private = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*)* @StreamDelete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @StreamDelete(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca %struct.vlc_stream_filter_private*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %5 = call %struct.vlc_stream_filter_private* @vlc_stream_Private(%struct.TYPE_5__* %4)
  store %struct.vlc_stream_filter_private* %5, %struct.vlc_stream_filter_private** %3, align 8
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %7 = load %struct.vlc_stream_filter_private*, %struct.vlc_stream_filter_private** %3, align 8
  %8 = getelementptr inbounds %struct.vlc_stream_filter_private, %struct.vlc_stream_filter_private* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @module_unneed(%struct.TYPE_5__* %6, i32 %9)
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @vlc_stream_Delete(i32 %13)
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @free(i32 %17)
  ret void
}

declare dso_local %struct.vlc_stream_filter_private* @vlc_stream_Private(%struct.TYPE_5__*) #1

declare dso_local i32 @module_unneed(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @vlc_stream_Delete(i32) #1

declare dso_local i32 @free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
